--- a/.github/workflows/frontend-ts.yml
+++ b/.github/workflows/frontend-ts.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Install JS Dependencies
         run: yarn install --frozen-lockfile
 
-      - name: Run Check
+      - name: Test TypeScript Types
         run: |
           cd ./frontend
           yarn tsc
