--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,26 +1,27 @@
 {
-  "name": "@robin/frontend",
-  "version": "0.0.0",
-  "license": "MIT",
-  "scripts": {
-    "dev": "next dev -p 9001",
-    "build": "next build --no-lint && next export",
-    "start": "next start",
-    "format": "prettier --no-color --write components hooks pages"
-  },
-  "dependencies": {
-    "next": "^13.1.6",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
-  },
-  "devDependencies": {
-    "@types/node": "18.14.0",
-    "@types/react": "^18.0.28",
-    "@types/react-dom": "^18.0.11",
-    "@typescript-eslint/eslint-plugin": "5.17.0",
-    "@typescript-eslint/parser": "5.17.0",
-    "eslint-config-next": "13.1.6",
-    "sass": "^1.58.3",
-    "typescript": "4.9.5"
-  }
+	"name": "@robin/frontend",
+	"version": "0.0.0",
+	"license": "MIT",
+	"scripts": {
+		"dev": "next dev -p 9001",
+		"build": "next build --no-lint && next export",
+		"start": "next start",
+		"format": "prettier --no-color --write components hooks pages"
+	},
+	"dependencies": {
+		"next": "^13.1.6",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
+		"react-query": "^3.39.3"
+	},
+	"devDependencies": {
+		"@types/node": "18.14.0",
+		"@types/react": "^18.0.28",
+		"@types/react-dom": "^18.0.11",
+		"@typescript-eslint/eslint-plugin": "5.17.0",
+		"@typescript-eslint/parser": "5.17.0",
+		"eslint-config-next": "13.1.6",
+		"sass": "^1.58.3",
+		"typescript": "4.9.5"
+	}
 }
