--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,9 @@
 		"@monaco-editor/react": "4.3.1",
 		"classnames": "^2.3.2",
 		"next": "^13.1.6",
+		"@primer/octicons-react": "16.3.0",
+		"tippy.js": "6.3.7",
+		"@tippyjs/react": "4.2.6",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-query": "^3.39.3"
