--- a/backend/package.json
+++ b/backend/package.json
@@ -1,7 +1,7 @@
 {
-	"name": "@robin/backend",
+	"name": "@robinplatform/backend",
 	"version": "0.0.0",
-	"license": "MIT",
+	"license": "GPL-3.0",
 	"bin": {
 		"robin": "./bin/cli"
 	},
