--- a/.github/workflows/check-ts.yml
+++ b/.github/workflows/check-ts.yml
@@ -5,18 +5,46 @@ jobs:
   check-ts:
     runs-on: ubuntu-22.04
 
+    continue-on-error: ${{ matrix.experimental }}
+
+    # TODO: include 16, 18, and latest
+    strategy:
+      matrix:
+        node: [14]
+        experimental: [false]
+
     steps:
       - uses: actions/checkout@v3
 
-      - name: Set up Node + Yarn
+      - name: Setup Node.js for use with actions
         uses: actions/setup-node@v3
         with:
-          cache: "yarn"
+          node-version: ${{ matrix.node }}
 
-      - name: Install JS Dependencies
-        run: yarn install --frozen-lockfile
+      - uses: actions/cache/restore@v3.2.5
+        with:
+          path: '**/node_modules'
+          key: ${{ runner.os }}-modules-${{ hashFiles('**/yarn.lock') }}-node-v${{ matrix.node }}
 
-      - name: Test TypeScript Types
+      # Source: https://nextjs.org/docs/advanced-features/ci-build-caching
+      - name: Cache NextJS Files
+        uses: actions/cache@v3
+        with:
+          path: |
+            ${{ github.workspace }}/.next/cache
+          key: ${{ runner.os }}-nextjs-${{ hashFiles('**/yarn.lock') }}-${{ hashFiles('**.[jt]s', '**.[jt]sx') }}
+          restore-keys: |
+            ${{ runner.os }}-nextjs-${{ hashFiles('**/yarn.lock') }}-
+
+      - name: Install Node.js dependencies
+        if: "steps.yarn-cache.outputs.cache-hit != 'true'"
+        run: yarn --frozen-lockfile
+
+      - uses: actions/cache/save@v3.2.5
+        with:
+          path: '**/node_modules'
+          key: ${{ runner.os }}-modules-${{ hashFiles('**/yarn.lock') }}-node-v${{ matrix.node }}
+
+      - name: Run all linting tasks
         run: |
-          cd ./frontend
-          yarn tsc
+          yarn workspaces run lint
