--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,33 +1,39 @@
 {
-	"name": "@robin/frontend",
+	"name": "@robinplatform/frontend",
 	"version": "0.0.0",
-	"license": "MIT",
+	"license": "GPL-3.0",
 	"scripts": {
 		"dev": "next dev -p 9001",
 		"build": "next build --no-lint && next export",
 		"start": "next start",
-		"format": "prettier --no-color --write components hooks pages"
+		"format": "prettier --no-color --write components pages",
+		"lint": "npm-run-all -p lint:*",
+		"lint:next": "next lint",
+		"lint:prettier": "prettier --no-color --check components pages",
+		"lint:tsc": "tsc"
 	},
 	"dependencies": {
 		"@monaco-editor/loader": "1.2.0",
 		"@monaco-editor/react": "4.3.1",
-		"classnames": "^2.3.2",
-		"next": "^13.1.6",
 		"@primer/octicons-react": "16.3.0",
-		"tippy.js": "6.3.7",
 		"@tippyjs/react": "4.2.6",
-		"react": "^18.2.0",
-		"react-dom": "^18.2.0",
-		"react-query": "^3.39.3"
+		"classnames": "2.3.2",
+		"next": "13.1.6",
+		"react": "18.2.0",
+		"react-dom": "18.2.0",
+		"react-query": "3.39.3",
+		"tippy.js": "6.3.7"
 	},
 	"devDependencies": {
 		"@types/node": "18.14.0",
-		"@types/react": "^18.0.28",
-		"@types/react-dom": "^18.0.11",
+		"@types/react": "18.0.28",
+		"@types/react-dom": "18.0.11",
 		"@typescript-eslint/eslint-plugin": "5.17.0",
 		"@typescript-eslint/parser": "5.17.0",
+		"eslint": "8.34.0",
 		"eslint-config-next": "13.1.6",
-		"sass": "^1.58.3",
+		"npm-run-all": "4.1.5",
+		"sass": "1.58.3",
 		"typescript": "4.9.5"
 	}
 }
