--- a/toolkit/tsconfig.json
+++ b/toolkit/tsconfig.json
@@ -11,6 +11,7 @@
     "strict": true,
     "forceConsistentCasingInFileNames": true,
     "outDir": "./dist",
+    "rootDir": "./src",
     "incremental": true,
     "declaration": true,
     "esModuleInterop": true,
@@ -21,10 +22,6 @@
     "jsx": "preserve",
     "downlevelIteration": true
   },
-  "include": [
-    "**/*.ts",
-    "**/*.tsx"
-  ],
   "exclude": [
     "node_modules",
     "dist"
