--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,12 +16,12 @@
 		"@monaco-editor/loader": "1.2.0",
 		"@monaco-editor/react": "4.3.1",
 		"@primer/octicons-react": "16.3.0",
+		"@tanstack/react-query": "4.24.9",
 		"@tippyjs/react": "4.2.6",
 		"classnames": "2.3.2",
 		"next": "13.1.6",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
-		"react-query": "3.39.3",
 		"tippy.js": "6.3.7"
 	},
 	"devDependencies": {
