--- a/toolkit/package.json
+++ b/toolkit/package.json
@@ -4,6 +4,9 @@
 	"license": "MIT",
 	"main": "dist/index.js",
 	"types": "dist/index.d.ts",
+	"engines": {
+		"node": "^14 || ^16 || ^18"
+	},
 	"scripts": {
 		"build": "rm -rf ./dist && tsc -p tsconfig.json && cp global-styles.css ./dist",
 		"format": "prettier --no-color --write 'src/**/*.{ts,tsx}'",
@@ -12,20 +15,20 @@
 		"lint:tsc": "tsc --noEmit"
 	},
 	"devDependencies": {
+		"@tanstack/react-query": "4.24.9",
 		"@types/react": "18.0.2",
 		"@types/react-dom": "18.0.2",
 		"react": "*",
 		"react-dom": "*",
 		"react-error-boundary": "^3",
-		"react-query": "^3",
 		"typescript": "4.9.5",
 		"zod": "^3"
 	},
 	"peerDependencies": {
+		"@tanstack/react-query": "^4",
 		"react": "*",
 		"react-dom": "*",
 		"react-error-boundary": "^3",
-		"react-query": "^3",
 		"zod": "^3"
 	}
 }
