--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,6 +32,7 @@
 		"@typescript-eslint/parser": "5.17.0",
 		"eslint": "8.34.0",
 		"eslint-config-next": "13.1.6",
+		"normalize.css": "8.0.1",
 		"npm-run-all": "4.1.5",
 		"sass": "1.58.3",
 		"typescript": "4.9.5"
