--- a/example/package.json
+++ b/example/package.json
@@ -3,5 +3,9 @@
 	"version": "0.0.0",
 	"license": "MIT",
 	"scripts": {},
+	"dependencies": {
+		"react": "17.0.2",
+		"react-dom": "17.0.2"
+	},
 	"devDependencies": {}
 }
