--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,12 +17,10 @@
 		"@monaco-editor/react": "4.3.1",
 		"@primer/octicons-react": "17.12.0",
 		"@tanstack/react-query": "4.24.9",
-		"@tippyjs/react": "4.2.6",
 		"classnames": "2.3.2",
 		"next": "13.1.6",
 		"react": "18.2.0",
-		"react-dom": "18.2.0",
-		"tippy.js": "6.3.7"
+		"react-dom": "18.2.0"
 	},
 	"devDependencies": {
 		"@types/node": "18.14.0",
