--- a/toolkit/package.json
+++ b/toolkit/package.json
@@ -5,7 +5,8 @@
 	"main": "dist/index.js",
 	"types": "dist/index.d.ts",
 	"scripts": {
-		"build": "rm -rf ./dist && tsc -p tsconfig.json",
+		"build": "rm -rf ./dist && tsc -p tsconfig.json && yarn build:css",
+		"build:css": "sass src/styles.scss:styles.css",
 		"format": "prettier --no-color --write 'src/**/*.{ts,tsx}'",
 		"lint": "npm-run-all -p lint:*",
 		"lint:prettier": "prettier --no-color --check 'src/**/*.{ts,tsx}'",
@@ -15,17 +16,9 @@
 		"@tanstack/react-query": "4.24.9",
 		"@types/react": "18.0.2",
 		"@types/react-dom": "18.0.2",
-		"react": "*",
-		"react-dom": "*",
-		"react-error-boundary": "^3",
+		"react": "18.2.0",
+		"react-dom": "18.2.0",
 		"typescript": "4.9.5",
-		"zod": "^3"
-	},
-	"peerDependencies": {
-		"@tanstack/react-query": "^4",
-		"react": "*",
-		"react-dom": "*",
-		"react-error-boundary": "^3",
-		"zod": "^3"
+		"zod": "3.20.6"
 	}
 }
