--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
 		"@monaco-editor/react": "4.3.1",
 		"@primer/octicons-react": "17.12.0",
 		"@tanstack/react-query": "4.24.9",
+		"axios": "1.3.3",
 		"classnames": "2.3.2",
 		"next": "13.1.6",
 		"react": "18.2.0",
