--- a/example/package.json
+++ b/example/package.json
@@ -6,7 +6,8 @@
 	"robin": "page.tsx",
 	"dependencies": {
 		"react": "17.0.2",
-		"react-dom": "17.0.2"
+		"react-dom": "17.0.2",
+		"@robinplatform/toolkit": "file:../toolkit"
 	},
 	"devDependencies": {}
 }
