--- a/toolkit/package.json
+++ b/toolkit/package.json
@@ -20,5 +20,11 @@
 		"react-dom": "18.2.0",
 		"typescript": "4.9.5",
 		"zod": "3.20.6"
+	},
+	"peerDependencies": {
+		"@types/react": "*",
+		"@types/react-dom": "*",
+		"react": "*",
+		"react-dom": "*"
 	}
 }
