--- a/toolkit/tsconfig.json
+++ b/toolkit/tsconfig.json
@@ -18,11 +18,15 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "jsx": "preserve",
+    "jsx": "react-jsx",
     "downlevelIteration": true
   },
   "exclude": [
     "node_modules",
     "dist"
+  ],
+  "include": [
+    "src/**/*.ts",
+    "src/**/*.tsx"
   ]
 }
