--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,7 +3,7 @@ name: Release
 on:
   workflow_run:
     workflows: ["Check TS", "Check Go"]
-    branches: [main, nightly]
+    branches: [main, nightly, build]
     types: 
       - completed
 
@@ -73,7 +73,7 @@ jobs:
           yarn workspace @robinplatform/frontend run build
 
       - name: Release nightly
-        if: "github.ref == 'refs/heads/nightly'"
+        if: "github.ref == 'refs/heads/nightly' || github.ref == 'refs/heads/build'"
         run: |
           yarn workspace @robinplatform/backend run build nightly
       
