--- a/.github/workflows/check-go.yml
+++ b/.github/workflows/check-go.yml
@@ -38,13 +38,15 @@ jobs:
 
       - name: Generate
         run: |
-          cd backend/
-          go generate -x ./...
-
           # Generating a pseudo frontend build so that vet
           # does not complain about the lack of an embed target
-          mkdir ./internal/server/web
-          echo 'hello' > ./internal/server/web/index.html
+          mkdir ./frontend/out
+          echo 'hello' > ./frontend/out/index.html
+
+          # Run generate for both targets
+          cd backend/
+          go generate -x ./...
+          go generate -x -tags prod ./...
 
       - name: Vet
         run: |
