--- a/.github/workflows/check-ts.yml
+++ b/.github/workflows/check-ts.yml
@@ -19,7 +19,14 @@ jobs:
 
       - name: Install Node.js dependencies
         if: "steps.yarn-cache.outputs.cache-hit != 'true'"
-        run: yarn --frozen-lockfile
+        run: |
+          yarn
+
+          if ! test -z "`git diff --stat`"; then
+            echo "yarn produced changes, exiting"
+            git diff --name-only | cat
+            exit 1
+          fi
 
       - name: Lint toolkit
         run: |
