--- a/example/package.json
+++ b/example/package.json
@@ -3,5 +3,11 @@
 	"version": "0.0.0",
 	"license": "MIT",
 	"scripts": {},
+	"robin": "page.tsx",
+	"dependencies": {
+		"react": "17.0.2",
+		"react-dom": "17.0.2",
+		"@robinplatform/toolkit": "file:../toolkit"
+	},
 	"devDependencies": {}
 }
