--- a/toolkit/tsconfig.json
+++ b/toolkit/tsconfig.json
@@ -14,9 +14,9 @@
 		"moduleResolution": "node",
 		"resolveJsonModule": true,
 		"isolatedModules": true,
-		"jsx": "preserve",
+		"jsx": "react-jsx",
 		"downlevelIteration": true
 	},
 	"exclude": ["node_modules", "dist"],
-	"include": ["src/**/*.tsx", "src/**/*.ts"]
+	"include": ["src/**/*.ts", "src/**/*.tsx"]
 }
