--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,6 +1,12 @@
 name: Release
 
-on: []
+on:
+  workflow_dispatch:
+    inputs:
+      branch:
+        required: true
+        description: Branch to release
+      
 
 jobs:
   check-ts:
@@ -12,6 +18,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
+        with:
+          ref: "refs/head/${{ github.event.inputs.branch }}"
 
       - name: Setup Golang
         uses: actions/setup-go@v3
