--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -44,6 +44,10 @@ jobs:
         run: |
           yarn workspace @robinplatform/frontend run build
 
+      - name: Install s3cmd
+        run: |
+          pip3 install s3cmd --no-cache
+
       - name: Release nightly
         if: "github.ref == 'refs/heads/nightly' || github.ref == 'refs/heads/release'"
         run: |
