--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,5 +1,4 @@
 name: Release
-
 on: [workflow_dispatch]
 
 jobs:
@@ -41,12 +40,21 @@ jobs:
           yarn workspace @robinplatform/toolkit run build
 
       - name: Build frontend
-        if: "github.ref == 'refs/heads/main' || github.ref == 'refs/heads/nightly'"
         run: |
           yarn workspace @robinplatform/frontend run build
+      
+      - name: Install s3cmd
+        run: |
+          pip3 install s3cmd --no-cache
+      
+      - name: Configure s3cmd
+        env:
+          S3CFG: ${{ secrets.S3CFG }}
+        run: |
+          echo $S3CFG | base64 --decode > ~/.s3cfg
 
       - name: Release nightly
-        if: "github.ref == 'refs/heads/nightly' || github.ref == 'refs/heads/build'"
+        if: "github.ref == 'refs/heads/nightly'"
         run: |
           yarn workspace @robinplatform/backend run release nightly
       
