--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,10 +5,6 @@ jobs:
   release:
     runs-on: ubuntu-22.04
 
-    strategy:
-      matrix:
-        node: [18]
-
     steps:
       - uses: actions/checkout@v3
 
@@ -27,10 +23,15 @@ jobs:
           cd backend/
           go generate -x ./...
 
+      - id: node-version
+        name: Get node version
+        run: |
+          echo "version=`cat .nvmrc`" >> $GITHUB_OUTPUT
+
       - name: Setup Node.js for use with actions
         uses: actions/setup-node@v3
         with:
-          node-version: ${{ matrix.node }}
+          node-version: ${{ steps.node-version.outputs.version }}
 
       - name: Install Node.js dependencies
         run: yarn
