--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,15 +6,15 @@
 		"dev": "next dev -p 9001",
 		"build": "next build --no-lint && next export",
 		"start": "next start",
-		"format": "prettier --no-color --write components pages",
+		"format": "prettier --no-color --write components hooks pages",
 		"lint": "npm-run-all -p lint:*",
 		"lint:next": "next lint",
-		"lint:prettier": "prettier --no-color --check components pages",
+		"lint:prettier": "prettier --no-color --check components hooks pages",
 		"lint:tsc": "tsc"
 	},
 	"dependencies": {
-		"@monaco-editor/loader": "1.2.0",
-		"@monaco-editor/react": "4.3.1",
+		"@monaco-editor/loader": "1.3.2",
+		"@monaco-editor/react": "4.4.6",
 		"@primer/octicons-react": "17.12.0",
 		"@tanstack/react-query": "4.24.9",
 		"axios": "1.3.3",
