--- a/toolkit/package.json
+++ b/toolkit/package.json
@@ -4,6 +4,9 @@
 	"license": "MIT",
 	"main": "dist/index.js",
 	"types": "dist/index.d.ts",
+    "publishConfig": {
+        "access": "public"
+    },
 	"scripts": {
 		"build": "rm -rf ./dist && tsc -p tsconfig.json && yarn build:css",
 		"build:css": "sass src/styles.scss:styles.css",
