--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
 	"dependencies": {
 		"@monaco-editor/loader": "1.3.2",
 		"@monaco-editor/react": "4.4.6",
+		"@primer/octicons": "17.12.0",
 		"@primer/octicons-react": "17.12.0",
 		"@tanstack/react-query": "4.24.9",
 		"axios": "1.3.3",
