--- a/example/package.json
+++ b/example/package.json
@@ -7,6 +7,7 @@
 	"dependencies": {
 		"react": "17.0.2",
 		"react-dom": "17.0.2",
+		"@tanstack/react-query": "4.24.10",
 		"@robinplatform/toolkit": "file:../toolkit"
 	},
 	"devDependencies": {}
