--- a/example/package.json
+++ b/example/package.json
@@ -8,7 +8,10 @@
 		"react": "17.0.2",
 		"react-dom": "17.0.2",
 		"@tanstack/react-query": "4.24.10",
-		"@robinplatform/toolkit": "file:../toolkit"
+		"@robinplatform/toolkit": "file:../toolkit",
+		"lodash": "4.17.21"
 	},
-	"devDependencies": {}
+	"devDependencies": {
+		"@types/lodash": "4.14.191"
+	}
 }
