--- a/toolkit/package.json
+++ b/toolkit/package.json
@@ -8,8 +8,7 @@
 		"access": "public"
 	},
 	"scripts": {
-		"build": "rm -rf ./dist && tsc -p tsconfig.json && yarn build:css",
-		"build:css": "sass src/styles.scss:styles.css",
+		"build": "sass styles.scss:styles.css",
 		"format": "prettier --no-color --write 'src/**/*.{ts,tsx}'",
 		"lint": "npm-run-all -p lint:*",
 		"lint:prettier": "prettier --no-color --check 'src/**/*.{ts,tsx}'",
