--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,7 +25,7 @@
 		"react-dom": "18.2.0"
 	},
 	"devDependencies": {
-		"@robinplatform/toolkit": "^0",
+		"@robinplatform/toolkit": "file:../toolkit",
 		"@types/node": "18.14.0",
 		"@types/react": "18.0.28",
 		"@types/react-dom": "18.0.11",
