--- a/toolkit/package.json
+++ b/toolkit/package.json
@@ -8,7 +8,9 @@
 		"access": "public"
 	},
 	"scripts": {
-		"build": "sass styles.scss:styles.css",
+		"build": "npm-run-all -p build:*",
+		"build:css": "sass styles.scss:styles.css",
+		"build:daemon": "esbuild --platform=node --target=node16 --bundle --format=cjs --outfile=internal/app-daemon.js internal/app-daemon.ts",
 		"format": "prettier --no-color --write .",
 		"lint": "npm-run-all -p lint:*",
 		"lint:prettier": "prettier --no-color --check .",
@@ -16,8 +18,15 @@
 	},
 	"devDependencies": {
 		"@tanstack/react-query": "4.24.9",
+		"@types/body-parser": "1.19.2",
+		"@types/express": "4.17.17",
+		"@types/morgan": "1.9.4",
 		"@types/react": "18.0.2",
 		"@types/react-dom": "18.0.2",
+		"body-parser": "1.20.2",
+		"esbuild": "0.17.10",
+		"express": "4.18.2",
+		"morgan": "1.10.0",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
 		"typescript": "4.9.5",
@@ -26,5 +35,8 @@
 	"peerDependencies": {
 		"react": "^18",
 		"react-dom": "^18"
+	},
+	"dependencies": {
+		"isomorphic-fetch": "3.0.0"
 	}
 }
