--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,6 +27,7 @@ jobs:
           go mod download
 
       - name: Format
+        if: ${{ matrix.runner != "windows-2022" }}
         run: |
           cd backend/
           if ! test -z "`gofmt -s -l .`"; then
