--- a/toolkit/package.json
+++ b/toolkit/package.json
@@ -9,7 +9,7 @@
 	},
 	"scripts": {
 		"build": "npm-run-all -p build:*",
-		"build:css": "sass styles.scss:styles.css",
+		"build:css": "sass --no-source-map styles.scss:styles.css",
 		"build:daemon": "esbuild --platform=node --target=node16 --bundle --format=cjs --outfile=internal/app-daemon.js internal/app-daemon.ts",
 		"format": "prettier --no-color --write .",
 		"lint": "npm-run-all -p lint:*",
@@ -18,15 +18,9 @@
 	},
 	"devDependencies": {
 		"@tanstack/react-query": "4.24.9",
-		"@types/body-parser": "1.19.2",
-		"@types/express": "4.17.17",
-		"@types/morgan": "1.9.4",
 		"@types/react": "18.0.2",
 		"@types/react-dom": "18.0.2",
-		"body-parser": "1.20.2",
 		"esbuild": "0.17.10",
-		"express": "4.18.2",
-		"morgan": "1.10.0",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
 		"typescript": "4.9.5",
