--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -56,7 +56,7 @@ jobs:
       - name: Test
         run: |
           cd backend/
-          go test -v -race ./...
+          go test -v -race -timeout 10s ./...
 
   check-ts:
     runs-on: ubuntu-22.04
