--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,6 +20,7 @@ jobs:
         uses: actions/setup-go@v3
         with:
           go-version: ~1.20
+          cache: true
 
       - name: Download go modules
         run: |
