--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,11 +3,7 @@ on: [push]
 
 jobs:
   check-go:
-    strategy:
-      matrix:
-        runner: [ubuntu-22.04, windows-2022]
-
-    runs-on: ${{ matrix.runner }}
+    runs-on: ubuntu-22.04
 
     concurrency:
       group: ${{ github.ref }}-check-go-${{ matrix.runner }}
@@ -54,6 +50,46 @@ jobs:
           cd backend/
           go vet ./...
           go vet -tags prod ./...
+          go vet -tags windows,prod ./...
+
+  test-go:
+    needs: [check-go]
+    strategy:
+      matrix:
+        runner: [ubuntu-22.04, windows-2022]
+
+    runs-on: ${{ matrix.runner }}
+
+    concurrency:
+      group: ${{ github.ref }}-check-go-${{ matrix.runner }}
+      cancel-in-progress: true
+
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Setup Golang
+        uses: actions/setup-go@v3
+        with:
+          go-version: ~1.20
+          cache-dependency-path: backend/go.sum
+          cache: true
+
+      - name: Download go modules
+        run: |
+          cd backend/
+          go mod download
+
+      - name: Generate
+        run: |
+          # Generating a pseudo frontend build so that vet
+          # does not complain about the lack of an embed target
+          mkdir ./frontend/out
+          echo 'hello' > ./frontend/out/index.html
+
+          # Run generate for both targets
+          cd backend/
+          go generate -x ./...
+          go generate -x -tags prod ./...
 
       - name: Test
         run: |
@@ -107,7 +143,7 @@ jobs:
 
   release:
     if: "${{ github.ref == 'refs/heads/main' || github.ref == 'refs/heads/nightly' }}"
-    needs: [check-go, check-ts]
+    needs: [check-go, test-go, check-ts]
     concurrency:
       group: ${{ github.ref }}-release
       cancel-in-progress: true
