--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,7 +49,7 @@ jobs:
           cd backend/
           go vet ./...
           go vet -tags prod ./...
-          go vet -tags windows,prod ./...
+          GOOS=windows go vet -tags prod ./...
 
   test-go:
     needs: [check-go]
