--- a/toolkit/package.json
+++ b/toolkit/package.json
@@ -22,6 +22,7 @@
 	"devDependencies": {
 		"@tanstack/react-query": "4.24.9",
 		"@types/isomorphic-fetch": "0.0.36",
+		"@types/json-stable-stringify": "1.0.34",
 		"@types/react": "18.0.2",
 		"@types/react-dom": "18.0.2",
 		"esbuild": "0.17.10",
@@ -35,6 +36,7 @@
 		"react-dom": "^18"
 	},
 	"dependencies": {
-		"isomorphic-fetch": "3.0.0"
+		"isomorphic-fetch": "3.0.0",
+		"json-stable-stringify": "1.0.2"
 	}
 }
