--- a/example/package.json
+++ b/example/package.json
@@ -7,6 +7,7 @@
 	"dependencies": {
 		"@robinplatform/toolkit": "file:../toolkit",
 		"@tanstack/react-query": "4.24.10",
+		"immer": "^9.0.21",
 		"lodash": "4.17.21",
 		"node-fetch": "^3.3.1",
 		"react": "17.0.2",
