--- a/example/package.json
+++ b/example/package.json
@@ -5,11 +5,14 @@
 	"scripts": {},
 	"robin": "page.tsx",
 	"dependencies": {
+		"@robinplatform/toolkit": "file:../toolkit",
+		"@tanstack/react-query": "4.24.10",
+		"immer": "^9.0.21",
+		"lodash": "4.17.21",
+		"node-fetch": "^3.3.1",
 		"react": "17.0.2",
 		"react-dom": "17.0.2",
-		"@tanstack/react-query": "4.24.10",
-		"@robinplatform/toolkit": "file:../toolkit",
-		"lodash": "4.17.21"
+		"zod": "3.21.4"
 	},
 	"devDependencies": {
 		"@types/lodash": "4.14.191"
