--- a/example/package.json
+++ b/example/package.json
@@ -12,7 +12,8 @@
 		"node-fetch": "^3.3.1",
 		"react": "17.0.2",
 		"react-dom": "17.0.2",
-		"zod": "3.21.4"
+		"zod": "3.21.4",
+		"zustand": "^4.3.6"
 	},
 	"devDependencies": {
 		"@types/lodash": "4.14.191"
