--- a/example/package.json
+++ b/example/package.json
@@ -9,6 +9,7 @@
 		"@tanstack/react-query": "4.24.10",
 		"immer": "^9.0.21",
 		"lodash": "4.17.21",
+		"lowdb": "^5.1.0",
 		"node-fetch": "^3.3.1",
 		"react": "17.0.2",
 		"react-dom": "17.0.2",
