--- a/example/package.json
+++ b/example/package.json
@@ -3,12 +3,14 @@
 	"version": "0.0.0",
 	"license": "MIT",
 	"scripts": {},
+	"type": "module",
 	"robin": "page.tsx",
 	"dependencies": {
 		"@robinplatform/toolkit": "file:../toolkit",
 		"@tanstack/react-query": "4.24.10",
 		"immer": "^9.0.21",
 		"lodash": "4.17.21",
+		"lowdb": "^5.1.0",
 		"node-fetch": "^3.3.1",
 		"react": "17.0.2",
 		"react-dom": "17.0.2",
